# tkddus21-Drone_HILS_add_PX4

PX4-Autopilot/boards/modalai/voxl2/libfc-sensor-api/: CMakeLists.txt
ros2_sensor/install/: local_setup.sh  setup.bash  setup.sh
ros2_sensor/install/lidar_distance/lib/lidar_distance/: left_lidar  right_lidar
ros2_sensor/install/lidar_distance/share/lidar_distance/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_sensor/log/: latest_build  latest_list
ros2_sensor/src/lidar_distance/: package.xml  setup.cfg  setup.py
ros2_sensor/src/lidar_distance/launch/: lidar_launch.py
ros2_sensor/src/lidar_distance/lidar_distance/: left_lidar_distance.py
sensor/install/: local_setup.sh  setup.ps1  setup.sh  setup.zsh
sensor/install/offboard/lib/offboard/: offboard_control  offboard_mode  offboard_node
sensor/install/offboard/share/offboard/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
sensor/install/px4_msgs/share/px4_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
sensor/install/px4_ros_com/include/px4_ros_com/: frame_transforms.h
sensor/install/px4_ros_com/lib/px4_ros_com/: GM_offboard_control.py  debug_vect_advertiser  offboard_control  offboard_control.py  offboard_control_srv  sensor_combined_listener  vehicle_gps_position_listener
sensor/install/px4_ros_com/share/px4_ros_com/: local_setup.bash  package.sh  (+4 more)
sensor/log/: latest_build  latest_list
sensor/src/offboard/: package.xml  setup.cfg  setup.py
sensor/src/offboard/offboard/: offboard_mode.py
(+3943 files in other folders)
