<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>offboard</name>
  <version>0.0.0</version>
  <description>PX4 Offboard Control Package</description>
  <maintainer email="jetson2@todo.todo">jetson2</maintainer>
  <license>Apache License 2.0</license>

  <!-- 필수 의존성 추가 -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>mavros_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>px4_msgs</exec_depend>

  <!-- 기존 테스트 의존성 유지 -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
